# bot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
src/: __init__.py
src/engine/: __init__.py  action_handler.py  event_manager.py  executor.py  graph_searcher.py  inference.py  rule_engine.py  translator.py
src/engine/rules/: __init__.py  aa_rules.py  expense_rules.py  reservation_rules.py  settlement_rules.py
src/graph/: __init__.py  action_log_repo.py  base_repo.py  connection.py  context_assembler.py  data_point_repo.py  event_repo.py  formal_language_repo.py  raw_message_repo.py  schema.py
src/pipeline/: __init__.py  orchestrator.py  scheduler.py
src/plugins/: __init__.py  listener.py  web_admin.py
src/web/: __init__.py  admin.py
src/web/static/: index.html
tests/: conftest.py
tests/integration/: test_expense_flow.py  test_real_scenario.py  test_repay_flow.py
tests/unit/: test_action_handler.py  test_env_loading.py  test_graph_searcher.py  test_inference.py  test_listener.py  test_rule_engine.py  test_web_admin.py
